# team-flyt-testhub

./: .env.example  .gitignore  BUILD.bazel  README.md  jokul-tokens.ts  package.json  pnpm-lock.yaml  remix.config.js  tailwind.config.ts  tsconfig.json
app/: BUILD.bazel  entry.server.tsx  root.tsx
app/common/: redisinfo.ts
app/common/utils/: ecr.ts  env.server.ts  environments.ts  fip.ts  formdata.ts  github.ts  isDefined.ts  jira.ts  response.server.ts
app/components/Dialog/: Dialog.module.scss  Dialog.tsx
app/components/DistributorLink/: DistributorLink.tsx  index.tsx
app/components/EnvironmentSection/: EnvironmentSectLiveLoader.tsx  EnvironmentSection.tsx
app/components/Footer/: Footer.tsx
app/components/Header/: Header.css  Header.tsx
app/components/JklNavLink/: JklNavLink.tsx  index.tsx
app/components/Modal/: Modal.tsx
app/components/NewEnvironmentButton/: NewEnvironmentButton.tsx  index.tsx
app/components/RadgiverLogin/: RadgiverLogin.tsx  index.tsx
app/components/UserSelect/: UserSelect.tsx  index.tsx
app/model/: ActionResponse.ts  Distributor.ts  TesthubResponseError.ts
app/model/github/: index.ts
app/model/github/models/: Branch.ts  BranchListResponse.ts
app/model/jira/: index.ts
app/model/jira/models/: ActorInputBean.ts  ActorsMap.ts  AddGroupBean.ts  AddNotificationsDetails.ts  AddSecuritySchemeLevelsRequestBean.ts  AnnouncementBannerConfiguration.ts  AnnouncementBannerConfigurationUpdate.ts  AppWorkflowTransitionRule.ts  Application.ts  ApplicationProperty.ts  ApplicationRole.ts  AssociateFieldConfigurationsWithIssueTypesRequest.ts  AssociateSecuritySchemeWithProjectDetails.ts  AssociatedItemBean.ts  Attachment.ts  AttachmentArchive.ts  AttachmentArchiveEntry.ts  AttachmentArchiveImpl.ts  AttachmentArchiveItemReadable.ts  AttachmentArchiveMetadataReadable.ts  AttachmentMetadata.ts  AuditRecordBean.ts  AuditRecords.ts  AutoCompleteSuggestion.ts  AutoCompleteSuggestions.ts  AvailableDashboardGadget.ts  AvailableDashboardGadgetsResponse.ts  Avatar.ts  AvatarUrlsBean.ts  Avatars.ts  BulkCustomFieldOptionCreateRequest.ts  BulkCustomFieldOptionUpdateRequest.ts  BulkIssuePropertyUpdateRequest.ts  BulkOperationErrorResult.ts  BulkPermissionGrants.ts  BulkPermissionsRequestBean.ts  BulkProjectPermissionGrants.ts  BulkProjectPermissions.ts  ChangeDetails.ts  ChangedValueBean.ts  (+470 more)
app/model/local/: CrmDataResponse.ts  availableUsers.ts
app/routes/: api.access-token.ts  events.branches.$.ts  events.tickets.$.ts  healthcheck.tsx
app/routes/_environments.new/: action.ts  loader.ts  model.ts  route.tsx
app/routes/_index/: loader.ts  model.ts  route.tsx
app/routes/branches.$project.$branchName/: action.tsx  loader.tsx  route.tsx
app/routes/branches._index/: View.css  View.tsx  loader.ts
app/routes/environments/: View.tsx  action.tsx  loader.ts  model.ts  route.tsx
app/routes/tickets.$ticket/: loader.tsx  route.tsx
app/services/: environmentCache.ts  environments.ts  fetcher.ts  github.ts  jira.ts  testlogin.ts
